k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-users-api-svc
spec:
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: rest-users-api
