k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.example.identicum.com
    http:
     paths:
     - path: /
       backend:
         serviceName: rest-users-api-svc
         servicePort: 8081
